2003-03-10  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget.c: (bacon_video_widget_can_get_frames),
	(bacon_video_widget_get_current_frame): Make it possible to take
	screenshots of visual plugins. This requires xine-lib beta8. People
	filing bugs because they use an older version owe me 50 quid.

2003-03-06  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* src/totem.c: (on_recent_file_activate): removed debug

2003-03-06  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget.c: (bacon_video_widget_can_get_frames):
	changes so we can take screenshots of everything that's got a video,
	we can now screenshot vis plugins, and oh fuck do they look nice ;)

2003-03-06  Anders Carlsson <andersca@codefactory.se>

	reviewed by: Bastien Nocera <hadess@hadess.net>

	* data/totem.glade:
	* src/totem.c: (on_always_on_top1_activate),
	(totem_callback_connect):
	* src/video-utils.c: (gdk_wmspec_change_state),
	(totem_gdk_window_set_always_on_top):
	* src/video-utils.h: Add support for always-on-top for the main window

2003-03-05  Duarte Loreto <happyguy_pt@hotmail.com>

        * configure.in: Added "pt" to ALL_LINGUAS.

2003-03-05  Bastien Nocera  <hadess@hadess.net>

	* src/video-utils.c: (yv12torgb): fix warning

2003-03-05  Bastien Nocera  <hadess@hadess.net>

	* README: updated
	* src/bacon-video-widget.c: (bacon_video_widget_get_current_frame):
	* src/video-utils.c: (yuy2toyv12), (yv12torgb):
	* src/video-utils.h: simplified the screenshot code and moved the
	colour conversion functions to video-utils.[ch], colour conversion
	comes from Guenter Bartsch <guenter@users.sourceforge.net>

2003-03-04  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: updated
	* src/bacon-video-widget.c: (setup_config),
	(bacon_video_widget_set_connection_speed),
	(bacon_video_widget_get_connection_speed),
	(bacon_video_widget_set_show_visuals):
	* src/bacon-video-widget.h:
	* src/totem-preferences.c: (auto_resize_changed_cb),